--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,12 +4,121 @@
   box-sizing: border-box;
 }
 
+.container {
+  width: 70%;
+  margin: auto;
+}
+
+.footer #top-footer {
+  background-color: #0c7cec;
+  height: 120px;
+}
+.footer #top-footer .container {
+  height: 100%;
+}
+.footer #top-footer .container ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+.footer #top-footer .container ul li {
+  display: flex;
+  flex-direction: row;
+}
+.footer #top-footer .container ul li img {
+  width: 60px;
+}
+.footer #top-footer .container ul li a {
+  text-decoration: none;
+  margin-left: 15px;
+  align-self: center;
+  color: white;
+  text-transform: uppercase;
+}
+.footer #mid-footer {
+  background-image: url("../img/footer-bg.jpg");
+  height: 400px;
+}
+.footer #mid-footer .container {
+  display: flex;
+  height: 100%;
+}
+.footer #mid-footer .container .left-side {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 25px 0px;
+}
+.footer #mid-footer .container .left-side .elenco h3 {
+  color: white;
+  text-transform: uppercase;
+  margin: 15px 0px;
+  font-size: 20px;
+}
+.footer #mid-footer .container .left-side .elenco ul {
+  list-style: none;
+}
+.footer #mid-footer .container .left-side .elenco ul li {
+  line-height: 25px;
+}
+.footer #mid-footer .container .left-side .elenco ul li a {
+  text-decoration: none;
+  color: grey;
+}
+.footer #mid-footer .container .right-side {
+  width: 50%;
+  background-image: url("../img/dc-logo-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.footer #bottom-footer {
+  height: 115px;
+  background-color: #303030;
+}
+.footer #bottom-footer .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+.footer #bottom-footer .container #button {
+  border: 2px solid #0c7cec;
+  padding: 15px 25px;
+}
+.footer #bottom-footer .container #button a {
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+}
+.footer #bottom-footer .container #socials {
+  display: flex;
+  align-items: center;
+}
+.footer #bottom-footer .container #socials h3 {
+  color: #0c7cec;
+  text-transform: uppercase;
+}
+.footer #bottom-footer .container #socials img {
+  margin: 10px;
+}
+
+.header .top-header {
+  background-color: #0c7cec;
+  display: flex;
+  justify-content: end;
+}
+.header .top-header p {
+  color: white;
+  margin-right: 150px;
+}
 .header .container {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-
 .header .container #img-box {
   width: 30%;
   height: 120px;
@@ -17,16 +126,13 @@
   align-items: center;
   cursor: pointer;
 }
-
 .header .container #nav-box {
   width: 70%;
   height: 120px;
 }
-
 .header .container #nav-box nav {
   height: 100%;
 }
-
 .header .container #nav-box nav ul {
   display: flex;
   list-style: none;
@@ -34,15 +140,12 @@
   height: 100%;
   align-items: center;
 }
-
 .header .container #nav-box nav ul .active {
   color: #0c7cec;
 }
-
 .header .container #nav-box nav ul li {
   margin: 0px 5px;
 }
-
 .header .container #nav-box nav ul li a {
   color: grey;
   text-decoration: none;
@@ -50,8 +153,6 @@
   font-size: 19px;
   height: 100%;
 }
-
 .header .container #nav-box nav ul li a:hover {
   color: #0c7cec;
 }
-
