--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -6,7 +6,7 @@
         background-color: #0c7cec;
         height: 120px;
 
-        .container {
+        .container-footer {
             height: 100%;
             ul {
                 display: flex;
@@ -39,7 +39,7 @@
         background-image: url("../img/footer-bg.jpg");
         height: 400px;
 
-        .container {
+        .container-footer {
             display: flex;
             height: 100%;
 
