--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -8,10 +8,11 @@
             margin-right: 150px;
         }
     }
-    .container {
+    .container-header {
         display: flex;
         justify-content: space-around;
         align-items: center;
+        padding: 10px 0px;
         #img-box {
             width: 30%;
             height: 120px;
