--- a/resources/sass/partials/_reset.scss
+++ b/resources/sass/partials/_reset.scss
@@ -3,7 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+body {
+    min-height: 100vh;
+}
 .container {
     width: 70%;
     margin: auto;
